corrected hover effect on mobile view for works index

--- a/_sass/works.scss
+++ b/_sass/works.scss
@@ -103,4 +103,8 @@
     padding: 0px;
     flex: 1 0 40%;
   }
+
+  .zoom:hover {
+    display: none;
+  }
 }
